fixed overflow from user input

--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,6 @@ h1{
     margin: 1rem 2.5rem;
     margin-bottom: 0;
     text-align: right;
-    word-wrap: break-word;
-    word-break: break-all;
 }
 #upperText, #bottomText{
     margin: 0.5rem 1rem;
@@ -45,6 +43,8 @@ h1{
     margin-right: 0.8rem;
     height: 60px;
     font-size: 60px;
+    word-wrap: break-word;
+    
 }
 #numpad{
     display: grid;
